[package]
name = "aery"
version = "0.3.1"
edition = "2021"
authors = ["iiYese iiyese@outlook.com"]
repository = "https://github.com/iiYese/aery"
description = "Non-fragmenting ZST relations for Bevy."
keywords = ["bevy", "relations", "game", "ecs"]
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.9.3"
bevy_ecs = { version = "0.11", default-features = false, features = ["bevy_reflect"] }
bevy_utils = { version = "0.11", default-features = false }
aery_macros = { path = "macros", version = "0.2.0-dev" }
aquamarine = "0.3.2"
log = "0.4"
